--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-layer": "^1.2.1",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
